added endpoint to update project
